Resolves: tdf#100761 after insert note, focus cannot return to inputbar

suspected regression from.

commit 11d605cc5a0c221d2423b6e63f502db660d085d2
Date:   Mon Feb 1 18:39:51 2016 +0200

    tdf#84843 Stop using PseudoSlots for drawing slots

Change-Id: I64aba363f7562c6b16ae1d679968149fea1ba763